--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "tailwindcss-textshadow": "^2.1.3",
     "vite": "^4.4.5"
   },
   "devDependencies": {
