--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "tailwindcss-textshadow": "^2.1.3",
+    "three": "^0.165.0",
+    "vanta": "^0.5.24",
     "vite": "^4.4.5"
   },
   "devDependencies": {
